# dmr-playground

./: .gitignore  pyproject.toml
account/: apps.py  containers.py  di.py  mappers.py  oauth.py  permissions.py  serializers.py  services.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_alter_user_email.py
account/views/: __init__.py  auth.py  oauth.py  user.py
api/: urls.py  views.py
base/: controller.py  request.py
myapi/: settings.py  urls.py
