[project]
name = "dmr-playground"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-extensions>=4.1",
    "django-modern-rest[openapi,pydantic]>=0.5.0",
    "django-stubs[compatible-mypy]>=6.0.2",
    "dmr>=0.1.0",
    "msgspec>=0.20.0",
    "psycopg[binary]>=3.3.3",
    "punq>=0.7.0",
    "ruff>=0.15.9",
]
