[project]
name = "dmr-playground"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "authlib>=1.6.10",
    "dependency-injector>=4.49.0",
    "django>=6.0.4",
    "django-extensions>=4.1",
    "django-modern-rest[jwt,openapi,pydantic]>=0.5.0",
    "django-stubs[compatible-mypy]>=6.0.2",
    "dmr>=0.1.0",
    "httpx>=0.28.1",
    "msgspec>=0.20.0",
    "psycopg[binary]>=3.3.3",
    "ruff>=0.15.9",
    "ty>=0.0.29",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "myproject.settings"

[dependency-groups]
dev = [
    "ty>=0.0.29",
]

